# Markdown-Review-Fork

./: .gitignore  README.WINDOWS.md  README.md  build-mac.sh  markdown-review.sh  package.json  review-board.sh
app/: app.css  app.js  index.html
examples/: sonnenfinsternis.md  sonnenfinsternis.md.feedback.json
scripts/: build.mjs  start.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: commands.rs  document.rs  editor_markdown.rs  ids.rs  lib.rs  main.rs  sanitize.rs  state.rs  thread.rs  timestamp.rs  window.rs
