[package]
name = "markdown-review"
version = "0.1.0"
description = "Markdown Review - lokales Review-Werkzeug fuer Markdown-Dateien"
edition = "2021"

[lib]
name = "markdown_review_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
time = { version = "0.3", features = ["formatting"] }

[[bin]]
name = "markdown-review"
path = "src/main.rs"

# Works around a macOS `ar` archiver limit ("Archive member lib.rmeta is too
# big") that full debug info triggers on this large a dependency tree.
[profile.dev]
debug = 0
